# python-template-midi

./: README.md  pyproject.toml  requirements.txt
your_project_name/: __main__.py
